Change a few small things to get some tests working for me

--- a/hello-world/ips.config
+++ b/hello-world/ips.config
@@ -21,7 +21,7 @@ USER_W3_BASEURL =
 # ======================================================================
 
 IPS_ROOT = $IPS_DIR
-IPS_EXAMPLES_PATH = $IPS_DIR/ips-examples
+IPS_EXAMPLES_PATH = $PWD
 
 # ======================================================================
 # SIMULATION INFO SECTION
@@ -89,7 +89,7 @@ STATE_FILES =
     INPUT_DIR = 
     INPUT_FILES = 
     OUTPUT_FILES =  
-    SCRIPT = $IPS_EXAMPLES_PATH/hello-world/source/hello_driver.py
+    SCRIPT = $IPS_EXAMPLES_PATH/source/hello_driver.py
 
 [hello_world]
     CLASS = workers 
@@ -100,7 +100,7 @@ STATE_FILES =
     INPUT_DIR = 
     INPUT_FILES = 
     OUTPUT_FILES =  
-    SCRIPT = $IPS_EXAMPLES_PATH/hello-world/source/hello_worker.py
+    SCRIPT = $IPS_EXAMPLES_PATH/source/hello_worker.py
 
 
 # =============================================================================
